--- a/src/interface/templates/publish_base.html
+++ b/src/interface/templates/publish_base.html
@@ -68,7 +68,7 @@
 
 <body>
 <!-- header -->
-<div id="top-nav" class="navbar navbar-default navbar-static-top affix">
+<div id="top-nav" class="navbar navbar-default navbar-static-top affix hidden-xs">
     <div class="container-fluid">
         <!--[if IE]>
         <div class="alert alert-info" style="text-align: center;">
