--- a/src/interface/templates/legalUser/applications/applications_content.html
+++ b/src/interface/templates/legalUser/applications/applications_content.html
@@ -43,7 +43,7 @@
             {% if params.type != 'trash' %}
             <td style="text-align: right">
                 <a class="fake-link collapse-row" href="#app_all{{forloop.counter}}">
-                    <span class="fa fa-check-square-o fa-fw"></span> 操作
+                    <span class="fa fa-wrench fa-fw"></span> 操作
                 </a>
             </td>
             {% endif %}
