--- a/src/interface/templates/legalUser/dashboard.ajax.html
+++ b/src/interface/templates/legalUser/dashboard.ajax.html
@@ -70,7 +70,7 @@
                                     </td>
                                     <td>
                                         <a class="fake-link collapse-row pull-right" href="#already{{forloop.counter}}">
-                                            <span class="fa fa-check-square-o fa-fw"></span> 操作&emsp;
+                                            <span class="fa fa-wrench fa-fw"></span> 操作&emsp;
                                         </a>
                                     </td>
                                 </tr>
@@ -148,7 +148,7 @@
                                     <td>{{ app.description|linebreaksbr|truncatechars:100 }}</td>
                                     <td>
                                         <a class="fake-link collapse-row pull-right" href="#pending{{forloop.counter}}">
-                                            <span class="fa fa-check-square-o fa-fw"></span> 操作&emsp;
+                                            <span class="fa fa-wrench fa-fw"></span> 操作&emsp;
                                         </a>
                                     </td>
                                 </tr>
