--- a/src/interface/templates/legalUser/design/design_list.html
+++ b/src/interface/templates/legalUser/design/design_list.html
@@ -22,7 +22,7 @@
             <hr>
             <a class="fake-link collapse-row pull-right"
                href="#" onclick="return Edit_title();">
-                <span class="fa fa-check-square-o fa-fw"></span> 编辑&emsp;
+                <span class="fa fa-pencil fa-fw"></span> 编辑&emsp;
             </a>
         </div>
 
