--- a/src/interface/templates/legalUser/design/modal/vote_modal.html
+++ b/src/interface/templates/legalUser/design/modal/vote_modal.html
@@ -53,13 +53,15 @@
                                     </div>
                                     <div class="col-xs-3 form-group">
                                         <label class="control-label pull-left">&nbsp;<span class="fa fa-photo fa-fw"></span>&nbsp;添加图片</label>
-
+                                        
                                         <input type="file" name="option1_img" id="option1_img" class="form-control fake-link"
                                                style="opacity: 0; z-index: 10; position: absolute;"
-                                               accept="image/*" onchange="display_name(this);">
+                                                onchange="display_name(this);">
                                         
-                                        <input class="form-control" disabled="disable">
+                                        <input class="form-control" disabled="disable" for="this.prev();">
+
                                     </div>
+
                                 </div>
                                 <br>
                             </div>
@@ -170,7 +172,7 @@
                                         <label class="control-label pull-left">&nbsp;<span class="fa fa-photo fa-fw"></span>&nbsp;添加图片</label>\
                                         <input type="file" name="option1_img" class="form-control fake-link"\
                                                style="opacity: 0; z-index: 10; position: absolute;"\
-                                               accept="image/*" onchange="display_name(this);">\
+                                                onchange="display_name(this);">\
                                         <input class="form-control" disabled="disable">\
                                     </div>\
                                 </div>\
