--- a/src/interface/templates/legalUser/design/questions/index.html
+++ b/src/interface/templates/legalUser/design/questions/index.html
@@ -15,13 +15,13 @@
 		        <span class="fa fa-trash fa-fw"></span> 删除&emsp;
 		    </a>
 		    <a class="fake-link collapse-row pull-right" href="#" onclick="return DownLi(this);" id="down_btn">
-		        <span class="fa fa-check-square-o fa-fw"></span> 下移&emsp;
+		        <span class="fa fa-arrow-down fa-fw"></span> 下移&emsp;
 		    </a>
 		    <a class="fake-link collapse-row pull-right" href="#" onclick="return UpLi(this);" id="up_btn">
-		        <span class="fa fa-check-square-o fa-fw"></span> 上移&emsp;
+		        <span class="fa fa-arrow-up fa-fw"></span> 上移&emsp;
 		    </a>
 		    <a class="fake-link collapse-row pull-right" onclick="return Edit(this);" id="edit_btn" href="#">
-		        <span class="fa fa-check-square-o fa-fw"></span> 编辑&emsp;
+		        <span class="fa fa-pencil fa-fw"></span> 编辑&emsp;
 		    </a>
 		</div>
     </div> 
