--- a/src/interface/templates/questionnaire/publish_qst/vote.html
+++ b/src/interface/templates/questionnaire/publish_qst/vote.html
@@ -12,7 +12,7 @@
             <tr>
                 <th style="width: 10%"></th>
                 <th style="width: 15%"></th>
-                <th style="width: 50%"></th>
+                <th></th>
                 <th style="width: 5%"></th>
                 <th style="width: 20%"></th>
             </tr>
@@ -117,11 +117,11 @@
 
                     var img_src = '';
                     var img = "";
-            //        if(has_image[i] == 'true') {
+                    if(has_image[i] == 'true') {
                         var src = "questionsImg/qst" + '{{ questions_id }}' + "_option" + i;
                         img_src = '{% static src %}' + src;
                         img = "<img src=" + img_src +  " class='img-responsive center-block'/>"
-            //        }
+                    }
                    
                     var to_append = prefix + '<td><input type="checkbox" name=' + option_name + 
                                                   ' id=' + radio_id + ' value=' + radio_value + ' class="vote"></td>\
