--- a/src/interface/templates/legalUser/login/log_page.html
+++ b/src/interface/templates/legalUser/login/log_page.html
@@ -74,6 +74,10 @@ img {
 /****-----start-body----****/
 body {
 	background-color: #2c3e50;
+	background: -webkit-radial-gradient(#fff 70%, lightgrey 20%);
+    background: -o-radial-gradient(#2c3e50 5%, lightgrey 60%);
+    background: -moz-radial-gradient(#2c3e50 5%, lightgrey 60%);
+    background: radial-gradient(circle, #def, #2c3e50);
 }
 .main {
 	margin: 5em auto 0;
@@ -92,7 +96,7 @@ h2 {
 	text-align: center;
 }
 .login {
-	padding: 2em 0;
+	padding: 0em 0;
 }
 .inset {
 	position: relative;
@@ -233,7 +237,7 @@ h1 {
 	font-size: 1.9em;
 }
 .login {
-	padding: 2em 0 0;
+	padding: 0em 0 0;
 }
 }
 </style>
@@ -243,11 +247,13 @@ h1 {
 	<div class="main">
 		<div class="login">
 			<div class="inset">
+				<img src="{% static 'image/logo.png' %}"/>
 				<form method="post" id="login_form">
 					{% csrf_token %}
 			         <div>
-			         	<h2>注册用户登录</h2>
-						<span><label>用户名:</label></span>
+			         	<hr>
+			         	<h2>用户登录</h2>
+						<span><label>学号:</label></span>
 						<span><input type="text" class="textbox" name='log_username' placeholder="username" onfocus="this.placeholder=''" onblur="this.placeholder='username'" required="required"></span>
 					 </div>
 					 <div>
@@ -258,10 +264,14 @@ h1 {
                         <input type="submit" value="确定" class="submit" />
 					</div>
                     <a href="{% url 'guest' %}">不是注册用户?</a>
-					</form>
-				</div>
+				</form>
 			</div>
+			<div align="center" style="font-size: 8px;">
+				<br>
+                copyright@ whyNotDance-关于-联系我们
+            </div>
 		</div>
+	</div>
 </body>
 </html>
 
