--- a/src/interface/templates/legalUser/login/log_page.html
+++ b/src/interface/templates/legalUser/login/log_page.html
@@ -247,7 +247,7 @@ h1 {
 	<div class="main">
 		<div class="login">
 			<div class="inset">
-				<img src="{% static 'image/logo.png' %}"/>
+				<img src="{% static 'image/logo_.png' %}"/>
 				<form method="post" id="login_form">
 					{% csrf_token %}
 			         <div>
